--- a/assets/direction-2.css
+++ b/assets/direction-2.css
@@ -130,3 +130,22 @@ h3{
 	color:plum;
 	padding: 0 0.25rem;
 }
+
+footer{
+	font-family: var(--title-font-family);
+	font-size: 1.25rem;
+	border-top: 2px solid black;
+	border-bottom: 2px solid black;
+	padding: 2.5rem 0;
+}
+
+#top{
+	background-color: black;
+	color: oldlace;
+	padding: .5rem .8rem;
+	/* border: 1.5px solid black; */
+	border-radius: 2rem;
+	position: fixed;
+	right: 5.25vw;
+	bottom: 4.5vh;
+}
