--- a/assets/direction-2.css
+++ b/assets/direction-2.css
@@ -90,8 +90,8 @@ h3{
 }
 
 #white{
-	background-color: lightgray;
-	color:lightgray;
+	background-color: white;
+	color:white;
 	padding: 0 0.25rem;
 }
 
