--- a/assets/direction-2.css
+++ b/assets/direction-2.css
@@ -14,7 +14,7 @@ body{
 	font-family: var(--body-font-family);
 	font-size: 1.12rem;
 	line-height: 1.75rem;
-	background-color: oldlace;
+	background-color: #f2f2f2;
 }
 
 section p{
@@ -23,7 +23,7 @@ section p{
 
 header{
 	font-family: var(--title-font-family);
-	border-top: 2px solid black;
+	/* border-top: 2px solid black; */
 	padding-bottom: 2rem;
 }
 
@@ -31,12 +31,17 @@ h1{
 	font-weight: 500;
 	font-size: 2.5rem;
 	line-height: 3rem;
-	background-color: oldlace;
 }
 
 #heading-number{
 	font-size: 5rem;
-	padding: 3rem 0;
+	padding: 2.8rem 0rem;
+	/* margin: 2rem 0; */
+	border: 2px solid transparent;
+	background-color: #f2f2f2;
+	color: black;
+	/* border-radius: 3rem; 
+	margin-right: 16.6rem; */
 }
 
 header p{
@@ -56,10 +61,10 @@ header p{
 }
 
 #first-h2{
-	padding-top: 4rem;
+	padding-top: 3.8rem;
 	position: sticky;
 	top: -1.8rem;
-	background-color: oldlace;
+	background-color: #f2f2f2;
 }
 
 h2{
@@ -69,7 +74,6 @@ h2{
 	padding: 2.2rem 0 1.5rem 0;
 	position: sticky;
 	top:0;
-	background-color: oldlace;
 	border-top: 2px solid black;
 }
 
@@ -81,53 +85,127 @@ h3{
 	padding: 1.5rem 1.25rem;
 	position: sticky;
 	top:0;
-	background-color: oldlace;
+	/* background-color: #f2f2f2; */
+	/* color: black; */
+}
+
+.black{
+	background-color: black;
+	color: white;
+	margin: 0 -1.25rem;
+	padding: 0 1.25rem;
 }
 
 #black{
 	background-color: black;
+	color: black;
+	border: 2px solid white;
+	border-radius: 3rem;
 	padding: 0 0.45rem;
+}
+
+.white{
+	background-color: white;
+	color: black;
+	margin: 0 -1.25rem;
+	padding: 0 1.25rem;
 }
 
 #white{
 	background-color: white;
 	color:white;
+	border: 2px solid black;
+	border-radius: 3rem;
 	padding: 0 0.25rem;
+}
+
+.yellow{
+	background-color: gold;
+	color: black;
+	margin: 0 -1.25rem;
+	padding: 0 1.25rem;
 }
 
 #yellow{
 	background-color: gold;
 	color:gold;
+	border: 2px solid black;
+	border-radius: 3rem;
 	padding: 0 0.25rem;
+}
+
+.orange{
+	background-color: darkorange;
+	color: black;
+	margin: 0 -1.25rem;
+	padding: 0 1.25rem;
 }
 
 #orange{
 	background-color: darkorange;
 	color:darkorange;
+	border: 2px solid black;
+	border-radius: 3rem;
 	padding: 0 0.25rem;
+}
+
+.red{
+	background-color: red;
+	color: black;
+	margin: 0 -1.25rem;
+	padding: 0 1.25rem;
 }
 
 #red{
 	background-color: red;
 	color:red;
+	border: 2px solid black;
+	border-radius: 3rem;
 	padding: 0 0.25rem;
+}
+
+.green{
+	background-color: limegreen;
+	color: black;
+	margin: 0 -1.25rem;
+	padding: 0 1.25rem;
 }
 
 #green{
 	background-color: limegreen;
 	color:limegreen;
+	border: 2px solid black;
+	border-radius: 3rem;
 	padding: 0 0.25rem;
+}
+
+.blue{
+	background-color: lightskyblue;
+	color: black;
+	margin: 0 -1.25rem;
+	padding: 0 1.25rem;
 }
 
 #blue{
 	background-color: lightskyblue;
 	color:lightskyblue;
+	border: 2px solid black;
+	border-radius: 3rem;
 	padding: 0 0.4rem;
+}
+
+.purple{
+	background-color: plum;
+	color: black;
+	margin: 0 -1.25rem;
+	padding: 0 1.25rem;
 }
 
 #purple{
 	background-color: plum;
 	color:plum;
+	border: 2px solid black;
+	border-radius: 3rem;
 	padding: 0 0.25rem;
 }
 
@@ -135,15 +213,16 @@ footer{
 	font-family: var(--title-font-family);
 	font-size: 1.25rem;
 	border-top: 2px solid black;
-	border-bottom: 2px solid black;
-	padding: 2.5rem 0;
+	/* border-bottom: 2px solid black; */
+	padding: 1.5rem 0;
+	margin-top: 2.5rem;
 }
 
 #top{
 	background-color: black;
-	color: oldlace;
+	color: #f2f2f2;
 	padding: .5rem .8rem;
-	/* border: 1.5px solid black; */
+
 	border-radius: 2rem;
 	position: fixed;
 	right: 5.25vw;
