--- a/assets/direction-1.css
+++ b/assets/direction-1.css
@@ -13,7 +13,7 @@ body{
 	font-family: var(--body-font-family);
 	font-size: 1.25rem;
 	line-height: 2rem;
-	max-width: 35rem;
+	/* max-width: 35rem; */
 }
 
 section p{
