added media desktop

--- a/assets/direction-2.css
+++ b/assets/direction-2.css
@@ -228,3 +228,10 @@ footer{
 	right: 5.25vw;
 	bottom: 4.5vh;
 }
+
+@media (min-width: 1280px){
+	body{
+		max-width: 45rem;
+		margin-left: 8%;
+}
+}
