--- a/assets/direction-1.css
+++ b/assets/direction-1.css
@@ -13,11 +13,12 @@ body{
 	font-family: var(--body-font-family);
 	font-size: 1.25rem;
 	line-height: 2rem;
-	/* max-width: 35rem; */
 }
 
 section p{
 	padding-bottom: 1.5rem;
+	max-width: 62rem;
+	padding-left: 30%;
 }
 
 header{
@@ -28,17 +29,20 @@ header{
 	padding: 2rem 1.25em;
 	position: relative;
 	z-index: 10;
+	padding-left: 3%;
 }
 
 h1{
 	font-weight: bold;
 	font-size: 2.5rem;
 	line-height: 3rem;
+	padding-left: 2%;
 }
 
 #heading-number{
 	font-size: 5rem;
 	padding: 2rem 0;
+	padding-left: 3%;
 }
 
 header p{
@@ -46,11 +50,14 @@ header p{
 	font-size: 1.5rem;
 	line-height: 2rem;
 	padding-top: 2.8rem;
+	max-width: 62rem;
+	padding-left: 30%;
 }
 
 .author-info p{
 	font-size: 1rem;
 	padding: 0;
+	padding-left: 3%;
 }
 
 .author-info{
@@ -62,6 +69,7 @@ header p{
 	position: sticky;
 	top: -1.8rem;
 	background-color: white;
+	padding-left: 3%;
 }
 
 
@@ -73,6 +81,7 @@ h2{
 	position: sticky;
 	top: 0;
 	background-color: white;
+	padding-left: 3%;
 }
 
 h3{
@@ -84,7 +93,9 @@ h3{
 	position: sticky;
 	top: 0;
 	background-color: white;
+	padding-left: 5%;
 }
+
 
 #black{
 	background-color: black;
@@ -142,6 +153,7 @@ footer{
 	border-top-right-radius: 1.5rem;
 	margin: 2.5rem -1.25rem -1.25rem;
 	padding: 2.5rem 1.25rem;
+	padding-left: 5%;
 }
 
 #top{
@@ -151,4 +163,11 @@ footer{
 	position: fixed;
 	right: 4vw;
 	bottom: 4.5vh;
+}
+
+@media (min-width: 1280px){
+	body{
+		padding-right: 15%;
+
+}
 }
