--- a/assets/direction-2.css
+++ b/assets/direction-2.css
@@ -64,7 +64,7 @@ header p{
 	padding-top: 3.8rem;
 	position: sticky;
 	top: -1.8rem;
-	background-color: #f2f2f2;
+	/* background-color: #f2f2f2; */
 }
 
 h2{
