--- a/assets/common.css
+++ b/assets/common.css
@@ -14,13 +14,14 @@
 	list-style: none;
 	display: flex;
 	justify-content: center;
-	background-color: lightgray;
-	border-radius: .5rem;
+	background-color: white;
+	/* border-radius: .5rem; */
 	padding: .8rem 0;
+	margin: -1.25rem;
 }
 
 .navbar li:first-child{
-	margin-right: 5rem;
+	margin-right: 7rem;
 }
 
 .navbar li:not(:first-child){
@@ -47,7 +48,8 @@ header{
 	font-family: var(--title-font-family);
 	border-bottom-right-radius:  1.5rem;
 	margin: -1.25rem;
-	padding: 1rem 1.25em;
+	margin-top: 1.25rem;
+	padding: .5rem 1.25em;
 	position: relative;
 	z-index: 10;
 }
@@ -102,7 +104,7 @@ h2{
 
 h3{
 	font-family: var(--title-font-family);
-	font-size: 1.25rem;
+	font-size: 1.4rem;
 	font-weight: 500;
 	margin: 0 -1.25rem;
 	padding: 1.5rem 1.25rem;
