--- a/assets/common.css
+++ b/assets/common.css
@@ -15,7 +15,6 @@
 	display: flex;
 	justify-content: center;
 	background-color: white;
-	/* border-radius: .5rem; */
 	padding: .8rem 0;
 	margin: -1.25rem;
 }
@@ -81,6 +80,11 @@ header p{
 .author-info{
 	padding-top: 2rem;
 	padding-bottom: 1rem;
+}
+
+em{
+	font-weight: bold;
+	text-decoration: underline;
 }
 
 #first-h2{
