--- a/landing.css
+++ b/landing.css
@@ -8,63 +8,119 @@
 	font-size: 16px;
 }
 
-.navbar{
-	font-family: var(--title-font-family);
-	font-size: 1.25rem;
-	list-style: none;
-	display: flex;
-	justify-content: center;
-	background-color: red;
-	padding: .8rem 0;
-}
-
-.navbar li:first-child{
-	margin-right: 7rem;
-}
-
-.navbar li:not(:first-child){
-	margin-left: 1.5rem;
-}
-
-.navbar a:hover{
-	font-weight: bold;
-	text-decoration: underline;
+body{
+	background-color: #231F20;
+	height: 100%;
 }
 
 header{
-	display:grid;
-	flex-direction:column;
+	padding: 2rem 1.25rem 0 1.25rem;
+	color: white;
+}
+
+h1{
+	font-family: var(--title-font-family);
+	font-size: 3rem;
+	font-weight: bold;
+}
+
+header p{
+	font-family: var(--body-font-family);
+	font-size: 1.5rem;
+	padding: 2rem 0;
+}
+
+.navbar{
+	display:flex;
+	gap: .5rem;
+	align-items: flex-end;
+	justify-content: center;
+	padding-bottom: 2rem;
+	background-color: #231F20;
+	/* height: 100%; */
+}
+
+.book{
+	width: 6.5rem;
+	/* height: 30rem; */
+	background-color: white;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
 	align-items: center;
-	padding: 12rem 0;
-	background-color: gray;
+	text-align: center;
+	padding: 0.5rem;
+	position: relative;
+	overflow: hidden;
 }
 
-.book1{
-	width: 18rem;
-	height: 6rem;
-	margin-left: -4.2rem;
-	padding: 1rem;
-	font-family: var(--title-font-family);
-	transform: rotate(90deg);
-	background-color: lightblue;
+/* first book */
+ul li:first-child{
+	background-color: #ff0000;
+} 
+
+/* second book */
+ul li:nth-child(2){
+	background-color: #00ff00;
 }
 
-.book2{
-	width: 18rem;
-	height: 6rem;
-	margin-left: 2.8rem;
-	padding: 1rem;
+/* third book */
+ul li:nth-child(3){
+	background-color: #0000ff;
+	color: white;
+} 
+
+/* numbers */
+li p:first-child{
 	font-family: var(--title-font-family);
-	transform: rotate(90deg);
-	background-color: plum;
+	font-size: 1.5rem;
+	font-weight: 400;
+	padding: 1rem;
 }
 
-.book3{
-	width: 18rem;
-	height: 6rem;
-	margin-left: 9.8rem;
-	padding: 1rem;
+/* article title */
+li p:nth-child(2){
 	font-family: var(--title-font-family);
-	transform: rotate(90deg);
-	background-color: lightseagreen;
+	font-size: 2rem;
+	font-weight: 500;
+	writing-mode: vertical-rl;
+	padding-bottom: 2.5rem;
+
+	padding-left: 1rem;
+}
+
+/* author name */
+li p:nth-child(3){
+	font-family: var(--title-font-family);
+	font-size: .74rem;
+}
+
+/* published year */
+li p:nth-child(4){
+	font-family: var(--title-font-family);
+	font-size: .74rem;
+	padding: .1rem 0 .5rem 0;
+}
+
+@media(min-width: 1280px){
+
+	ul li:first-child, ul li:nth-child(2), ul li:nth-child(3){
+		background-color: white;
+		color: #231F20;
+	}
+
+	ul li:first-child:hover{
+		background-color: #ff0000;
+		color:white;
+	}
+
+	ul li:nth-child(2):hover{
+		background-color: #00ff00;
+		color: white;
+	}
+
+	ul li:nth-child(3):hover{
+		background-color: #0000ff;
+		color:white;
+	}
 }
