--- a/landing.css
+++ b/landing.css
@@ -36,14 +36,14 @@ header p{
 	align-items: flex-end;
 	justify-content: center;
 	padding-bottom: 2rem;
-	background-color: #231F20;
+	/* background-color: #231F20; */
 	/* height: 100%; */
 }
 
 .book{
 	width: 6.5rem;
 	/* height: 30rem; */
-	background-color: white;
+	/* background-color: white; */
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
