--- a/landing.css
+++ b/landing.css
@@ -5,6 +5,8 @@
 	--body-font-family: 'albert sans';
 	--margin: 1.25rem;
 
+	--base-color: #231f20;
+
 	font-size: 16px;
 }
 
@@ -36,14 +38,10 @@ header p{
 	align-items: flex-end;
 	justify-content: center;
 	padding-bottom: 2rem;
-	/* background-color: #231F20; */
-	/* height: 100%; */
 }
 
 .book{
 	width: 6.5rem;
-	/* height: 30rem; */
-	/* background-color: white; */
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
@@ -87,6 +85,10 @@ li p:nth-child(2){
 	padding-bottom: 2.5rem;
 
 	padding-left: 1rem;
+}
+
+#book3-title{
+	padding-left: 1.5rem;
 }
 
 /* author name */
