--- a/landing.css
+++ b/landing.css
@@ -16,7 +16,7 @@ body{
 }
 
 header{
-	padding: 2rem 1.25rem 0 1.25rem;
+	padding: 2.5rem 1.25rem 2.5 1.25rem;
 	color: white;
 }
 
@@ -38,10 +38,12 @@ header p{
 	align-items: flex-end;
 	justify-content: center;
 	padding-bottom: 2rem;
+	
 }
 
 .book{
-	width: 6.5rem;
+	width: 7rem;
+	/* height: 32rem; */
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
@@ -49,7 +51,6 @@ header p{
 	text-align: center;
 	padding: 0.5rem;
 	position: relative;
-	overflow: hidden;
 }
 
 /* first book */
@@ -73,7 +74,7 @@ li p:first-child{
 	font-family: var(--title-font-family);
 	font-size: 1.5rem;
 	font-weight: 400;
-	padding: 1rem;
+	padding: 1.5rem;
 }
 
 /* article title */
