--- a/03 everyday color theory/style.css
+++ b/03 everyday color theory/style.css
@@ -1,12 +1,12 @@
 
 header{
-	background-color: lightskyblue;
+	background-color: #CEC045;
 }
 
 footer{
-	background-color: lightskyblue;
+	background-color: #CEC045;
 }
 
 #top{
-	background-color: lightskyblue;
+	background-color: #CEC045;
 }
