--- a/assets/common.css
+++ b/assets/common.css
@@ -14,7 +14,7 @@
 	list-style: none;
 	display: flex;
 	justify-content: center;
-	background-color: white;
+	background-color: ECE1DB;
 	padding: .8rem 0;
 	margin: -1.25rem;
 }
@@ -37,6 +37,7 @@ body{
 	font-family: var(--body-font-family);
 	font-size: 1.125rem;
 	line-height: 2rem;
+	background-color: #ECE1DB;
 }
 
 section p{
@@ -56,7 +57,7 @@ header{
 h1{
 	font-weight: bold;
 	font-size: 2.5rem;
-	line-height: 3rem;
+	line-height: 3.5rem;
 }
 
 #heading-number{
@@ -91,7 +92,7 @@ em{
 	padding-top: 4rem;
 	position: sticky;
 	top: -1.8rem;
-	background-color: white;
+	background-color: ECE1DB;
 }
 
 
@@ -102,7 +103,7 @@ h2{
 	padding: 2.2rem 0 1.5rem 0;
 	position: sticky;
 	top: 0;
-	background-color: white;
+	background-color: ECE1DB;
 	/* padding-left: 3%; */
 }
 
@@ -114,7 +115,7 @@ h3{
 	padding: 1.5rem 1.25rem;
 	position: sticky;
 	top: 0;
-	background-color: white;
+	background-color: ECE1DB;
 }
 
 
