--- a/landing.css
+++ b/landing.css
@@ -11,19 +11,20 @@
 }
 
 body{
-	background-color: #EBECE7;
+	background-color: #ECE1DB;
 	height: 100%;
 }
 
 header{
 	padding: 2.5rem 1.25rem 2.5 1.25rem;
-	color: black;
+	color:#211610;
 }
 
 h1{
 	font-family: var(--title-font-family);
 	font-size: 3rem;
 	font-weight: bold;
+	line-height: 3.5rem;
 }
 
 #the{
@@ -43,10 +44,10 @@ header p{
 
 .navbar{
 	display:flex;
-	gap: 1rem;
+	gap: 0.5rem;
 	align-items: flex-end;
 	justify-content: center;
-	padding-bottom: 2rem;
+	padding: 2rem 0 ;
 	
 }
 
@@ -76,7 +77,7 @@ header p{
 }
 
 .book3, .book4, .book5{
-	width: 6.5rem;
+	width: 100%;
 	height: 32rem;
 	display: flex;
 	flex-direction: column;
@@ -89,55 +90,57 @@ header p{
 }
 
 .book3{
-	background-color: #ff0000;
+	background-color: #99B0FE;
+	color:#211610;
 	/* transform: rotate(2deg); */
 }
 
 .book4{
-	background-color: #00ff00;
+	background-color: #FF66FF;
+	color: #211610;
 	/* transform: rotate(2deg); */
 }
 
 .book5{
-	background-color: #0000ff;
-	color: white;
+	background-color: #CEC045;
+	color: #211610;
 }
 
 .booknumbers{
 	font-family: var(--title-font-family);
 	font-size: 1.5rem;
-	font-weight: 400;
-	padding: 1.5rem;
+	font-weight: bold;
+	padding: 1.5rem 0 1rem 0;
 }
 
 .book-title{
 	font-family: var(--title-font-family);
 	font-size: 2rem;
-	font-weight: 500;
+	font-weight: 600;
 	writing-mode: vertical-rl;
 	padding-bottom: 2.5rem;
-	padding-left: .8rem;
+	padding-left: 1rem;
 }
 
 #book5-title{
 	font-family: var(--title-font-family);
 	font-size: 2rem;
-	font-weight: 500;
+	font-weight: 600;
 	writing-mode: vertical-rl;
 	padding-bottom: 2.5rem;
-	padding-left: 1.5rem;
+	padding-left: 1.8rem;
 }
 
 .author3{
 	font-family: var(--title-font-family);
 	font-size: .8rem;
-	padding-top: 3.5rem;
+	padding-top: 3.75rem;
 }
 
 .author4{
 	font-family: var(--title-font-family);
 	font-size: .8rem;
-	padding-top: 11.6rem;
+	padding-top: 12.15rem;
 }
 
 .author5{
