--- a/assets/common.css
+++ b/assets/common.css
@@ -69,8 +69,8 @@ header{
 
 h1{
 	font-weight: bold;
-	font-size: 2.5rem;
-	line-height: 3.5rem;
+	font-size: 4.5rem;
+	line-height: 4.5rem;
 }
 
 #heading-number{
@@ -102,7 +102,8 @@ em{
 }
 
 #first-h2{
-	padding-top: 4rem;
+	margin-top: 1rem;
+	padding-top: 2.5rem;
 	position: sticky;
 	top: -1.8rem;
 	background-color: var(--background-color);
@@ -111,9 +112,10 @@ em{
 
 h2{
 	font-family: var(--title-font-family);
-	font-size: 1.5rem;
+	font-size: 2rem;
 	font-weight: 600;
-	padding: 2.2rem 0 1.5rem 0;
+	line-height: 2.4rem;
+	padding: 1.2rem 0 1.2rem 0;
 	position: sticky;
 	top: 0;
 	background-color: var(--background-color);
@@ -122,10 +124,10 @@ h2{
 
 h3{
 	font-family: var(--title-font-family);
-	font-size: 1.4rem;
+	font-size: 1.6rem;
 	font-weight: 500;
 	margin: 0 -1.25rem;
-	padding: 1.5rem 1.25rem;
+	padding: 1.2rem 1.25rem;
 	position: sticky;
 	top: 0;
 	background-color: var(--background-color);
